<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="Typos,TypographyDashes">
    <string name="app_name">Quickagram</string>
    <string name="alt_app_name">Fazpass Social</string>
    <string name="merchant_key">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZGVudGlmaWVyIjozNn0.mfny8amysdJQYlCrUlYeA-u4EG1Dw9_nwotOl-0XuQ8</string>
    <string name="otp_sms_gateway_key">2c16a981-4ff6-4b48-b747-82169f0a4e70</string>
    <string name="otp_miscall_gateway_key">9defc750-83d8-4167-93e4-4fdab80a3eaf</string>
    <string name="otp_email_gateway_key">194dd39a-d7dd-419c-9cf4-d5ccf833f0b1</string>
    <string name="otp_wa_gateway_key">fa65c0ff-ef96-4c42-abb1-8c46c445711f</string>
    <string name="otp_wa_long_gateway_key">32f5aa02-e0a5-427d-a235-383fdcb32632</string>
    <string name="otp_he_gateway_key">b038aebb-718b-4845-bb20-3ca0d03f1b5a</string>
    <string name="person_name_default">John Doe</string>
    <string name="person_email_default">johndoe111@gmail.com</string>
    <string name="person_phone_default">012345678910</string>
    <string name="login">Login / Register</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vel facilisis volutpat est velit egestas dui id ornare arcu. Fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis. Consectetur purus ut faucibus pulvinar elementum integer. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Arcu ac tortor dignissim convallis aenean et tortor at risus. Egestas tellus rutrum tellus pellentesque eu tincidunt. Tellus integer feugiat scelerisque varius morbi. Tincidunt arcu non sodales neque sodales ut etiam sit.</string>

    <string name="confirm_login_question">How would you like to confirm your identity?</string>
    <string name="greeting_message">Welcome, <b>%1$s</b>!</string>
    <string name="cd_notification_message">\nWe just sent a notification to the device that has been logged in to your account. Please confirm it to continue.\n</string>
    <string name="sms_verification_message">\nWe just sent a message to your phone number. Put in the otp code from the message.\n</string>
    <string name="phone_verification_message">\nWe just called your phone number. Enter the last %1$d digits of the caller\'s number.\n</string>
    <string name="email_verification_message">\nWe just sent an email to your email address. Put in the otp code from the email.\n</string>
    <string name="wa_verification_message">\nWe just sent a message to your WhatsApp number. Put in the otp code from the message.\n</string>
    <string name="he_verification_message">\nPlease wait while we do header enrichment verification…\n</string>
    <string name="otp_not_ready_message">OTP is not ready yet.</string>
    <string name="otp_confirming_message">\nPlease wait while we check your otp…\n</string>
    <string name="error_message_sample">Session has expired. Please login again to renew your session.</string>
    <string name="fazpass_init_failed_message">Failed to initialize %1$s. Check your internet and try again.</string>
    <string name="login_info">*currently, phone number only works in indonesia</string>
    <string name="cd_incoming_login_message">Someone is trying to login into your account from device %s. Would you like to accept it?</string>
    <string name="login_finish">Please wait, preparing to homepage…</string>
</resources>